--- a/form.html
+++ b/form.html
@@ -13,7 +13,7 @@
     <form action="https://formsubmit.co/saniashiekha@gmail.com" method="POST">
       <textarea name="message" rows="8" placeholder="اینجا بنویس..." style="width:100%; padding:10px; font-size:1em;" required></textarea>
       <input type="hidden" name="_captcha" value="false">
-      <input type="hidden" name="_next" value="https://yourusername.github.io/thanks.html">
+      <input type="hidden" name="_next" value="https://danielblue18.github.io/onlyforliam/thanks.html">
       <button type="submit" style="margin-top:10px; padding:10px 20px; border:none; border-radius:10px; background-color:#444; color:white;">بفرست</button>
     </form>
   </div>
