--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,75 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div class="song-box">
+  <audio id="audioPlayer" src="https://drive.google.com/uc?export=download&id=1bPgEQYR-OUJWxuQimASDkOzFhL91Lkzb"></audio>
+
+  <div class="song-info">
+    <h2>Lie With You – TEN</h2>
+    <button id="playButton" class="star-button">★</button>
+    <p class="quote">هر شب توی خیال، زیر ستاره‌ها، کنارت دراز می‌کشم...<br>و احساس میکنم کنارمی حتی وقتی نیستی</p>
+  </div>
+</div>
+
+<style>
+.song-box {
+  background: linear-gradient(145deg, #c8d8e4, #a2b4c0);
+  padding: 30px;
+  border-radius: 25px;
+  text-align: center;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+  margin: 40px auto;
+  width: 80%;
+  font-family: 'Vazirmatn', sans-serif;
+}
+
+.song-info h2 {
+  font-size: 1.5rem;
+  margin-bottom: 15px;
+  color: #2c3e50;
+}
+
+.star-button {
+  font-size: 40px;
+  color: gold;
+  background: none;
+  border: none;
+  cursor: pointer;
+  filter: blur(0.5px) brightness(1.1);
+  transition: transform 0.3s ease;
+}
+
+.star-button:hover {
+  transform: scale(1.2);
+  filter: brightness(1.5);
+}
+
+.quote {
+  font-size: 1rem;
+  margin-top: 20px;
+  color: #444;
+  font-style: italic;
+}
+</style>
+
+<script>
+  const playButton = document.getElementById("playButton");
+  const audioPlayer = document.getElementById("audioPlayer");
+
+  let isPlaying = false;
+
+  playButton.addEventListener("click", () => {
+    if (!isPlaying) {
+      audioPlayer.play();
+      isPlaying = true;
+      playButton.style.color = "#ffec8b"; // روشن‌تر
+    } else {
+      audioPlayer.pause();
+      isPlaying = false;
+      playButton.style.color = "gold";
+    }
+  });
+</script>
   <div id="password-screen">
     <h2>Enter the key</h2>
     <input type="password" id="password-input" placeholder="Enter the password"/>
