--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head> 
+  .stars, .stars2, .stars3 {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-repeat: repeat;
+  background-position: 0 0;
+  z-index: 0;
+  pointer-events: none;
+  opacity: 0.6;
+}
+
+.stars {
+  background-image: url('https://i.ibb.co/KDFJxT0/stars1.png');
+  animation: moveStars 200s linear infinite;
+}
+
+.stars2 {
+  background-image: url('https://i.ibb.co/YQFtrPg/stars2.png');
+  animation: moveStars 400s linear infinite;
+  opacity: 0.3;
+}
+
+.stars3 {
+  background-image: url('https://i.ibb.co/w6FHGsq/stars3.png');
+  animation: moveStars 600s linear infinite;
+  opacity: 0.2;
+}
+
+@keyframes moveStars {
+  from {background-position: 0 0;}
+  to {background-position: -10000px 5000px;}
+}
+  <script>
+  const starsCount = 80;
+
+  for (let i = 0; i < starsCount; i++) {
+    const star = document.createElement('div');
+    star.classList.add('star');
+    star.style.top = `${Math.random() * 100}vh`;
+    star.style.left = `${Math.random() * 100}vw`;
+    star.style.animationDuration = `${Math.random() * 5 + 2}s`;
+    star.style.width = `${Math.random() * 2 + 1}px`;
+    star.style.height = star.style.width;
+    document.body.appendChild(star);
+  }
+</script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Echo - Only for Liam</title>
@@ -16,7 +64,10 @@
     <p class="quote">هر شب توی خیال، زیر ستاره‌ها، کنارت دراز می‌کشم...<br>و احساس میکنم کنارمی حتی وقتی نیستی</p>
   </div>
 </div>
-
+<div class="stars"></div>
+<div class="stars2"></div>
+<div class="stars3"></div>
+  </body>
 <style>
 .song-box {
   background: linear-gradient(145deg, #c8d8e4, #a2b4c0);
