--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head> 
-  .stars, .stars2, .stars3 {
+<style>
+.stars, .stars2, .stars3 {
   position: fixed;
   top: 0;
   left: 0;
@@ -35,6 +36,7 @@
   from {background-position: 0 0;}
   to {background-position: -10000px 5000px;}
 }
+  </style>
   <script>
   const starsCount = 80;
 
