--- a/Index.html
+++ b/Index.html
@@ -154,7 +154,6 @@
           <p>Compass - The Neighbourhood</p>
           <audio controls src="audio/compass.mp3"></audio>
         </li>
-        <!-- ادامه‌ی آهنگ‌ها رو خودت به همین شکل اضافه کن -->
       </ul>
     </section>
 
@@ -177,8 +176,7 @@
         document.getElementById("password-screen").style.display = "none";
         document.getElementById("content").style.display = "block";
       } else {
-        error.textContent = "رمز اشتباهه... دوباره امتحان کن.";
-      }
+        error.textContent =
     }
   </script>
 </body>
